fix home div on mobile

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -441,6 +441,10 @@ footer {
         font-size: 10px;
     }
 
+    .home_mobile {
+        max-width: 360px;
+    }
+
     .home_content {
         margin-top: 45px;
         margin-bottom: 8px;
